ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: akash1
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: atkare
spec:
  rules:
    - host: kaiyo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akash1
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: akash2
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: atkare
spec:
  rules:
    - host: kaiyo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akash2
                port:
                  number: 80
